<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_main"
        android:title="@string/title_home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_history"
        android:title="@string/History"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_promotions"
        android:icon="@drawable/ic_plans"
        android:title="@string/Plans"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/Profile"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_settings"
        android:title="@string/Settings"
        app:showAsAction="ifRoom"/>



</menu>
