<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SignUp"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/LogoSize"
        android:layout_marginLeft="@dimen/LogoMarginleft"
        android:layout_marginTop="@dimen/LogoMarginTop"
        android:scaleType="fitStart"
        android:src="@drawable/logo" />
    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="44dp"
        android:layout_marginLeft="@dimen/customMarginLeft"
        android:text="Welcome!"
        android:textColor="#000000"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/customMarginLeft"
                android:layout_marginTop="@dimen/LogoMarginTop"
                android:layout_marginRight="@dimen/customMarginRight"
                android:text="@string/welcomeBack"
                android:textColor="#000000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/LogoMarginleft"
                android:layout_marginTop="@dimen/LogoMarginTop"
                android:layout_marginRight="@dimen/customMarginRight"
                android:background="@color/transparent">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/EtPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_number"
                        android:inputType="phone"
                        android:maxLength="14" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/customMarginLeft"
                android:layout_marginTop="@dimen/LogoMarginTop"
                android:layout_marginRight="@dimen/customMarginRight"
                android:background="@color/transparent">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/colorPrimary">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/EtPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_password"
                        android:inputType="textPassword"
                        android:maxLength="14" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="@dimen/LogoMarginTop"
                android:layout_marginRight="@dimen/customMarginRight"
                android:text="@string/forgot_password"
                android:textColor="#000000"
                android:textSize="16dp" />

            <Button
                android:id="@+id/btnSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/CustomMarginTop"
                android:backgroundTint="#F8EBFA"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#9500FF" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/CustomMarginTop"
                android:text="@string/need_account"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#000000" />
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="9">

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="#A700BF"
            android:text="@string/sign_up"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="#FFFFFF" />

    </LinearLayout>
    </LinearLayout>
</LinearLayout>