<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SignUp"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/LogoSize"
            android:layout_marginLeft="@dimen/LogoMarginleft"
            android:layout_marginTop="@dimen/LogoMarginTop"
            android:scaleType="fitStart"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/initial_marginLeft"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/sign_up"
            android:textColor="#000000"
            android:textSize="44dp" />


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:weightSum="2">
        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/textInputHeight"
            android:layout_marginRight="@dimen/customMarginRight"
            android:layout_marginLeft="@dimen/customMarginLeft"
            android:background="@color/transparent"
            android:orientation="horizontal"
            android:layout_weight="1">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/EtName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name_sign_up"
                    android:inputType="text"
                    android:maxLength="14" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/textInputHeight"
        android:layout_marginTop="@dimen/CustomMarginTop"
        android:layout_marginRight="@dimen/customMarginRight"
        android:layout_weight="1"
        android:background="@color/transparent"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/EtLastN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name_sign_up"
                android:inputType="text"
                android:maxLength="14" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

</LinearLayout>


        <LinearLayout
            android:layout_marginTop="@dimen/CustomMarginTop"
            android:layout_width="match_parent"
            android:layout_height="@dimen/textInputHeight"
            android:layout_marginRight="@dimen/customMarginRight"
            android:layout_marginLeft="@dimen/customMarginLeft"
            android:background="@color/transparent">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/EtPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_number"
                    android:inputType="phone"
                    android:maxLength="14" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/CustomMarginTop"
            android:layout_width="match_parent"
            android:layout_height="@dimen/textInputHeight"
            android:layout_marginRight="@dimen/customMarginRight"
            android:layout_marginLeft="@dimen/customMarginLeft"
            android:background="@color/transparent"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/EtMail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_sign_up"
                    android:inputType="textEmailAddress"
                    android:maxLength="18" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/CustomMarginTop"
            android:layout_width="match_parent"
            android:layout_height="@dimen/textInputHeight"
            android:layout_marginRight="@dimen/customMarginRight"
            android:layout_marginLeft="@dimen/customMarginLeft"
            android:background="@color/transparent"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorPrimary">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/EtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_sign_up"
                    android:inputType="textPassword"
                    android:maxLength="18" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>




</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="9">

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="#A700BF"
            android:text="@string/sign_up"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="#FFFFFF" />

    </LinearLayout>

</LinearLayout>